tests/rosetta/out/Go/anonymous-recursion.error
run error: exit status 1
# command-line-arguments
../../tests/rosetta/out/Go/anonymous-recursion.go:33:6: main redeclared in this block
	../../tests/rosetta/out/Go/anonymous-recursion.go:18:6: other declaration of main
